--- a/index.html
+++ b/index.html
@@ -2,189 +2,105 @@
 <html lang="ar">
 <head>
 <meta charset="UTF-8">
-<title>الاستشارات الطبية</title>
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>استبيان الاستشارات الطبية</title>
+<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
 <style>
-body{
-  font-family: Arial;
-  direction: rtl;
-  background:#f4f4f4;
-  padding:20px;
-}
-.container{
-  background:white;
-  padding:20px;
-  max-width:900px;
-  margin:auto;
-  border-radius:10px;
-}
-h2{
-  text-align:center;
-  color:#0066cc;
-}
-.question{
-  margin-bottom:15px;
-}
-.correct{
-  color:green;
-  font-weight:bold;
-}
-.wrong{
-  color:red;
-  font-weight:bold;
-}
-button{
-  padding:10px 20px;
-  background:#0066cc;
-  color:white;
-  border:none;
-  border-radius:5px;
-  cursor:pointer;
-}
-button:hover{
-  background:#004c99;
-}
-textarea{
-  width:100%;
+body { font-family: 'Cairo', sans-serif; background: linear-gradient(135deg, #e0f7ff, #ffffff); margin: 0; padding: 0; direction: rtl; }
+.quiz-container { max-width: 700px; background: #fff; margin: 50px auto; padding: 40px 30px; border-radius: 25px; box-shadow: 0 15px 35px rgba(0,0,0,0.15); transition: all 0.3s ease; }
+.quiz-container:hover { transform: translateY(-5px); }
+h2 { text-align: center; color: #0275d8; margin-bottom: 25px; font-size: 28px; }
+.question { font-size: 22px; margin: 25px 0 15px; font-weight: 700; }
+.answers button { width: 100%; padding: 18px; margin: 12px 0; border: none; border-radius: 20px; background: #0275d8; color: #fff; font-size: 18px; font-weight: bold; cursor: pointer; transition: 0.3s; }
+.answers button:hover { background: #025aa5; transform: scale(1.03); }
+#result { margin-top: 25px; font-size: 20px; font-weight: bold; text-align: center; color: #333; }
+.progress-bar { width: 100%; background: #eee; border-radius: 12px; overflow: hidden; margin-bottom: 25px; height: 22px; }
+.progress { height: 100%; background: #0275d8; width: 0%; transition: width 0.4s ease-in-out; }
+@media (max-width: 768px){
+    .quiz-container { margin: 30px 20px; padding: 30px 20px; }
+    h2 { font-size: 24px; }
+    .question { font-size: 20px; }
 }
 </style>
 </head>
-
 <body>
 
-<div class="container">
-<h2>الاستشارات الطبية لمؤسسة ال عبد اللطيف الطرشوبي</h2>
-
-<label>الاسم:</label>
-<input type="text" id="name"><br><br>
-
-<label>رقم الهاتف:</label>
-<input type="text" id="phone"><br><br>
-
-<form id="quizForm"></form>
-
-<button onclick="submitQuiz()">إنهاء الكويز</button>
-
-<div id="finalResult"></div>
-
+<div class="quiz-container">
+    <h2>استبيان الاستشارات الطبية</h2>
+    <div class="progress-bar">
+        <div class="progress" id="progress"></div>
+    </div>
+    <div id="quiz">
+        <div class="question" id="question">سوف يظهر السؤال هنا</div>
+        <div class="answers" id="answers"></div>
+    </div>
+    <div id="result"></div>
 </div>
 
 <script>
+// ==== ضع هنا أسئلتك الطبية ====
+const quizData = [
+    // مثال:
+    // {question: "هل تشعر بأي أعراض؟", answers:["نعم","لا"], values:[1,0]}
+];
 
-// ====== أسئلة اختيار من متعدد ======
+let currentQuestion = 0;
+let score = 0;
+let userAnswers = [];
 
-const mcqQuestions = Array.from({length:15}, (_,i)=>({
-  q:`سؤال اختيار من متعدد رقم ${i+1}`,
-  options:["اختيار 1","اختيار 2","اختيار 3","اختيار 4"],
-  answer:0
-}));
+// رابط Web App الخاص بـ Google Sheets
+const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbxgpRr_5nZyxXjq1NvB9esUM51leNlxThk9UeZrvxsmI-vr0cWFj-ktLFQ8TGpF693R/exec"; 
 
-// ====== أسئلة مقالي ======
+function loadQuestion() {
+    if(currentQuestion >= quizData.length){
+        document.getElementById("quiz").style.display = "none";
+        document.getElementById("progress").style.width = "100%";
+        
+        let advice = "";
+        if(score <= 2) advice = "لا تحتاج لاستشارة فورية، لكن راقب صحتك.";
+        else if(score <= 5) advice = "قد يكون من المفيد استشارة طبيب قريبًا.";
+        else advice = "ننصحك بجدية بزيارة طبيب مختص فورًا.";
 
-const essayQuestions = Array.from({length:5}, (_,i)=>({
-  q:`سؤال مقالي رقم ${i+1}`,
-  ideal:"هذه هي الإجابة المثالية المقترحة لهذا السؤال."
-}));
-
-const form = document.getElementById("quizForm");
-
-// عرض أسئلة MCQ
-mcqQuestions.forEach((item,index)=>{
-  let div = document.createElement("div");
-  div.classList.add("question");
-
-  div.innerHTML = `<p>${item.q}</p>` +
-  item.options.map((opt,i)=>
-    `<label>
-      <input type="radio" name="mcq${index}" value="${i}" onclick="checkAnswer(${index},${i})">
-      ${opt}
-    </label><br>`
-  ).join("") +
-  `<div id="feedback${index}"></div>`;
-
-  form.appendChild(div);
-});
-
-// عرض أسئلة المقالى
-essayQuestions.forEach((item,index)=>{
-  let div = document.createElement("div");
-  div.classList.add("question");
-
-  div.innerHTML = `
-    <p>${item.q}</p>
-    <textarea name="essay${index}" rows="3"></textarea>
-  `;
-
-  form.appendChild(div);
-});
-
-// تصحيح فوري للاختيار من متعدد
-function checkAnswer(qIndex,selected){
-
-  let feedback = document.getElementById("feedback"+qIndex);
-
-  if(selected === mcqQuestions[qIndex].answer){
-    feedback.innerHTML = "<span class='correct'>✔ إجابة صحيحة</span>";
-  }else{
-    feedback.innerHTML = "<span class='wrong'>✖ إجابة خاطئة - الإجابة الصحيحة هي: "
-      + mcqQuestions[qIndex].options[mcqQuestions[qIndex].answer]
-      + "</span>";
-  }
-}
-
-// إنهاء الكويز
-function submitQuiz(){
-
-  let name = document.getElementById("name").value;
-  let phone = document.getElementById("phone").value;
-
-  if(!name || !phone){
-    alert("من فضلك أدخل الاسم ورقم الهاتف");
-    return;
-  }
-
-  let score = 0;
-  let mcqAnswers = [];
-  let essayAnswers = [];
-
-  mcqQuestions.forEach((q,i)=>{
-    let selected = document.querySelector(`input[name="mcq${i}"]:checked`);
-    if(selected){
-      mcqAnswers.push(selected.value);
-      if(parseInt(selected.value) === q.answer){
-        score++;
-      }
-    }else{
-      mcqAnswers.push("لم يجب");
+        document.getElementById("result").innerText = `نتيجتك: ${score} - ${advice}`;
+        sendToGoogleSheet();
+        return;
     }
-  });
 
-  essayQuestions.forEach((q,i)=>{
-    let ans = document.querySelector(`textarea[name="essay${i}"]`).value;
-    essayAnswers.push(ans);
-  });
+    const q = quizData[currentQuestion];
+    document.getElementById("question").innerText = q.question;
 
-  fetch("https://script.google.com/macros/s/AKfycbzg0S9LIY2C-RaaxKBVO8R0SCKbQdJhL2qbT8A0Q1hGWuc9wgmhXNpAn008hRseujCf/exec",{
-    method:"POST",
-    body:JSON.stringify({
-      name:name,
-      phone:phone,
-      score:score,
-      mcqAnswers:mcqAnswers.join(" | "),
-      essayAnswers:essayAnswers.join(" | ")
-    })
-  });
-
-  let resultHTML = `<h3>درجتك في الاختيار من متعدد: ${score} / 15</h3>`;
-  resultHTML += "<h3>الإجابات المثالية للأسئلة المقالية:</h3>";
-
-  essayQuestions.forEach((q)=>{
-    resultHTML += `<p>${q.ideal}</p>`;
-  });
-
-  document.getElementById("finalResult").innerHTML = resultHTML;
+    const answersDiv = document.getElementById("answers");
+    answersDiv.innerHTML = "";
+    q.answers.forEach((ans,index)=>{
+        const btn = document.createElement("button");
+        btn.innerText = ans;
+        btn.onclick = ()=>{
+            score += q.values[index];
+            userAnswers.push(ans);
+            currentQuestion++;
+            updateProgress();
+            loadQuestion();
+        };
+        answersDiv.appendChild(btn);
+    });
 }
 
+function updateProgress(){
+    const percent = (currentQuestion/quizData.length)*100;
+    document.getElementById("progress").style.width = percent + "%";
+}
+
+function sendToGoogleSheet(){
+    fetch(WEB_APP_URL,{
+        method:"POST",
+        body: JSON.stringify({answers:userAnswers}),
+        headers:{"Content-Type":"application/json"}
+    }).then(res=>res.json())
+      .then(data=>console.log("تم حفظ البيانات:", data))
+      .catch(err=>console.error("خطأ في الإرسال:", err));
+}
+
+loadQuestion();
 </script>
 
 </body>
